[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Other/white-64x64.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Enemies/SlimeOrange/SlimeOrangeFireBall.tscn" type="PackedScene" id=3]
[ext_resource path="res://Maps/TestBossSlime/BossSlime.gd" type="Script" id=4]
[ext_resource path="res://Assets/Other/ShadowWhite_32x32.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 10 )

[sub_resource type="Animation" id=2]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -16 ), Vector2( 0, -16 ), Vector2( 0, 0 ) ]
}

[node name="TestBossSlime" type="Node2D"]

[node name="ground" type="Sprite" parent="."]
self_modulate = Color( 0.4, 0.760784, 0.282353, 1 )
position = Vector2( 280, 280 )
scale = Vector2( 9.75, 9.75 )
z_index = -10
texture = ExtResource( 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="Polygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PoolVector2Array( -12, -16, 578, -16, 578, 578, -12, 576, -12, 278, 290, 278, 290, 246, -12, 248, -12, 16, -24, 16, -24, 584, 586, 584, 586, -24, -24, -24, -24, 12, -12, 12 )

[node name="Polygon2D2" type="Polygon2D" parent="StaticBody2D"]
visible = false
polygon = PoolVector2Array( -12, -16, 578, -16, 578, 578, -12, 576, -12, 16, -24, 16, -24, 584, 586, 584, 586, -24, -24, -24, -24, 12, -12, 12 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 130, 156 )

[node name="BossSlimeNo1_1" type="KinematicBody2D" parent="."]
position = Vector2( 294, 464 )
collision_layer = 16
collision_mask = 3
script = ExtResource( 4 )
detect_radius = 250
fire_rate = 1.0
Bullet = ExtResource( 3 )

[node name="Shadow" type="Sprite" parent="BossSlimeNo1_1"]
self_modulate = Color( 0, 0, 0, 0.196078 )
position = Vector2( 0, -10 )
scale = Vector2( 2.5625, 1.1875 )
texture = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="BossSlimeNo1_1"]
texture = ExtResource( 1 )
offset = Vector2( 0, -32 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BossSlimeNo1_1"]
position = Vector2( 0, -10 )
shape = SubResource( 1 )

[node name="Visibility" type="Area2D" parent="BossSlimeNo1_1"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="BossSlimeNo1_1/Visibility"]

[node name="ShootTimer" type="Timer" parent="BossSlimeNo1_1"]
one_shot = true
autostart = true

[node name="HeadLabel" type="Label" parent="BossSlimeNo1_1"]
margin_left = -20.0
margin_top = -90.0
margin_right = 20.0
margin_bottom = -76.0
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="BossSlimeNo1_1"]
autoplay = "idle"
anims/idle = SubResource( 2 )
[connection signal="body_entered" from="BossSlimeNo1_1/Visibility" to="BossSlimeNo1_1" method="_on_Visibility_body_entered"]
[connection signal="body_exited" from="BossSlimeNo1_1/Visibility" to="BossSlimeNo1_1" method="_on_Visibility_body_exited"]
[connection signal="timeout" from="BossSlimeNo1_1/ShootTimer" to="BossSlimeNo1_1" method="_on_ShootTimer_timeout"]
